--- a/Dockerfile.webapp
+++ b/Dockerfile.webapp
@@ -24,6 +24,10 @@ COPY services/ services/
 COPY templates/ templates/
 COPY static/ static/
 
+# Copy entrypoint script
+COPY webapp-entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+
 # Create data directory for shared volume
 RUN mkdir -p /data
 
@@ -34,6 +38,9 @@ ENV FLASK_APP=app.py
 
 # Expose port 5000
 EXPOSE 5000
+
+# Use entrypoint to fix permissions
+ENTRYPOINT ["/entrypoint.sh"]
 
 # Run the Flask application
 CMD ["python", "app.py"]
